--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -4,7 +4,7 @@
     display: grid;
     grid:
       "sidebar body1 body2" 1fr
-      / auto 1fr 1fr;
+      / 0.5fr 1.5fr 1.5fr;
     gap: 8px;
   }
   
