--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -19,7 +19,7 @@
   width: 35px; /* Adjust as needed */
   height: 35px; /* Adjust as needed */
   border-radius: 50%; /* Makes it a circle */
-  background-color: lightblue; /* For visual clarity */
+  background-color: rgb(48, 56, 88); /* For visual clarity */
   display: flex; /* Use flexbox for centering */
   justify-content: center; /* Horizontally center text */
   align-items: center; /* Vertically center text */
