--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -1,5 +1,5 @@
 html, body {
-  height: 100%;
+  /* height: 100%; */
   margin: 0;
   padding: 0;
 }
@@ -17,10 +17,10 @@ html, body {
 
 .sidebar { 
   grid-area: sidebar; 
-  height: 100vh;
+  height: 90vh;
   box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
   padding-left: 0.5rem; /* Bootstrap ps-2 */
-  padding-right: 0.5rem; /* you can remove this if you don't want right padding */
+  /* padding-right: 0.5rem; you can remove this if you don't want right padding */
 }
 .header { grid-area: header; }
 .body_1 { grid-area: body_1; }
