--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -17,7 +17,7 @@ html, body {
 
 .sidebar { 
   grid-area: sidebar; 
-  box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
+  /* box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1); */
 }
 .header { grid-area: header; }
 .body_1 { grid-area: body_1; }
