--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -6,7 +6,7 @@ html, body {
 
 .layout {
   width: 100%;
-  height: 100%;
+  height: 100vh;
 
   display: grid;
   grid:
@@ -19,6 +19,7 @@ html, body {
 .sidebar { 
   grid-area: sidebar; 
   box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
+  overflow-y: auto;
 }
 .header { grid-area: header; }
 .body_1 { grid-area: body_1; }
