--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -4,6 +4,7 @@ html, body {
   padding: 0;
 }
 
+/* DASHBOARD */
 .layout {
   width: 100%;
   height: 100vh;
@@ -24,6 +25,24 @@ html, body {
 .header { grid-area: header; }
 .body_1 { grid-area: body_1; }
 .body_2 { grid-area: body_2; }
+
+
+/* TABLE PAGES */
+
+.table_layout {
+  width: 100%;
+
+  display: grid;
+  grid:
+    "sidebar header" 0.001fr
+    "sidebar body" 1fr
+    / auto 1fr;
+  gap: 8px;
+}
+
+.table_sidebar { grid-area: sidebar; }
+.table_header { grid-area: header; }
+.table_body { grid-area: body; }
 
 
 .circle-with-text {
