--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -17,7 +17,7 @@ html, body {
   /* gap: 8px; */
 }
 
-.sidebar { 
+.sidebar,.table_sidebar { 
   grid-area: sidebar; 
   box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
   overflow-y: auto;
