--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -36,8 +36,8 @@ html, body {
   grid:
     "table_sidebar table_header" 0.001fr
     "table_sidebar table_body" 1fr
-    / auto 1fr;
-  gap: 8px;
+    / 0.5fr 1.5fr;
+  /* gap: 8px; */
 }
 
 .table_sidebar { 
