--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -66,7 +66,10 @@ a:focus {
   /* gap: 8px; */
 }
 
-.details { grid-area: details; }
+.details { 
+  grid-area: details;
+  box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
+}
 .comments { grid-area: comments; }
 
 
